welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  int aDiff = Math.abs(a - 10);
  ^close10:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  int bDiff = Math.abs(b - 10);
  ^close10:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (aDiff < bDiff) 
  ^close10:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  {
  ^close10:10: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (bDiff < aDiff) 
  ^close10:11: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  {
  ^close10:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return 0; 
  ^